--- a/styles/styles.css
+++ b/styles/styles.css
@@ -155,7 +155,32 @@ main {
     width: 100%;
     border: 1px solid red;
     z-index: 5;
-    padding: 5px 10px; }
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: justify;
+    -ms-flex-pack: justify;
+    justify-content: space-between;
+    -webkit-box-align: center;
+    -ms-flex-align: center;
+    align-items: center;
+    padding: 10px 10px 5px 10px; }
+    main .logo-button .get-more {
+      text-decoration: none;
+      background: -webkit-gradient(linear, left top, left bottom, from(#c61d23), to(#a0171c));
+      background: -webkit-linear-gradient(top, #c61d23, #a0171c);
+      background: -o-linear-gradient(top, #c61d23, #a0171c);
+      background: linear-gradient(to bottom, #c61d23, #a0171c);
+      color: white;
+      text-transform: uppercase;
+      font-weight: lighter;
+      font-size: 10px;
+      padding: 5px 25px;
+      border-radius: 2px;
+      display: block;
+      margin-bottom: 2px;
+      -webkit-box-shadow: 1px 1px 5px 1px rgba(0, 0, 0, 0.67);
+      box-shadow: 1px 1px 5px 1px rgba(0, 0, 0, 0.67); }
 
 .full-van {
   position: relative; }
