--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -32,7 +32,25 @@ main {
         width: 100%;
         border: 1px solid red;
         z-index: 5;
-        padding: 5px 10px;
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        padding: 10px 10px 5px 10px;
+        .get-more {
+            text-decoration: none;
+            background:linear-gradient(to bottom, #c61d23, #a0171c);
+            color: white;
+            text-transform: uppercase;
+            font-weight: lighter;
+            font-size: 10px;
+            padding: 5px 25px;
+            border-radius: 2px;
+            display: block;
+            margin-bottom: 2px;
+            box-shadow: 1px 1px 5px 1px rgba(0,0,0,0.67);
+        }
+
+        
     }
 }
 
@@ -54,3 +72,5 @@ main {
 .full-van {
     position: relative;
 }
+
+
